Change log for zeit.web
=======================

1.65 (unreleased)
-----------------

- ZON-2115: Add Meta Title, Description Ruleset for Keywordpages


1.64 (2015-09-09)
-----------------

- ZON-1901: Verlagsnextread

- ZON-2121: Add styles and scripts for Datenjournalismus

- ZON-2180: Add routes for keyword pages

- ZON-2015: Videos in articles

- ZON-1341: Advertorial CP

- ZON-2013: Make tile12 max wide with ad centered

- ZON-2075: Redirect unauthorized comment recommendation requests

- ZON-2179: Redirect on cp2015 suffix

- ZON-2073: Redirect on trailing slash.

- ZON-2145: Use new fallback_size setting to restrict image sizes for noscript,
  so we don't have to restrict the largest available variant via max_size.

- DEV-935: Quickfix for Community-Redaktions-Auszeichnung

- MAINT: Polish headline of following pages

- FIX: Fix wrong ZEAR rule at noindex setting

- ZON-1990: Render feeds for newsfeed.zeit.de



1.63.3 (2015-09-04)
-------------------

- ZON-2160: Render links from entity tag


1.63.2 (2015-09-04)
-------------------

- DEV-923: Use image variant specified on the layout for article images

- MAINT: Polish comment count styles

- FIX: Fix another layout breaking banner between 720 and 768px in ZMO


1.63.1 (2015-09-03)
-------------------

- FIX: Fix wrong layout for MR7 and 8 in ZMO


1.63 (2015-09-03)
-----------------

- ZON-2053: Resort and collapse comment replies

- ZON-1960: Adcontroller for ZMO

- MAINT: Polish comments preferences and parquet topic links

- ZON-2053: Resort and collapse comment replies

- MAINT: Polish comments preferences and parquet topic links

- FIX: Provide additional fallback for teaser images


1.62 (2015-09-02)
-----------------

- ZON-2062: Migrate video and sharinge images to new image server

- ZON-2080: Hide cp2015 ending in sharing data

- ZON-2002: Include cards from espi-be via esi

- ZON-1592: Label "Verlagsangebote"

- ZON-2064: Kommentarezahl Artikel oben

- FIX: Fix SASS mixin for rem values

